# frst-mvp-demo

./: CMakeLists.txt  prj.conf  sample.yaml  west.yml
boards/xtensa/frst_model_1/: esp32s3_devkitm.dts
src/: .main.c.swp
